# aws-greengrass-sdk-lite

./: .clang-format  .clangd  .cmake-format.json  .cspell.json  .editorconfig  .gitignore  CMakeLists.txt  README.md  coverity.json  fc_deps.json  flake.nix
.github/workflows/: ci.yml
cpp/: .clang-format  .clang-tidy  CMakeLists.txt
cpp/include/gg/: arena.hpp  buffer.hpp  error.hpp  list.hpp  map.hpp  object.hpp  schema.hpp  sdk.hpp  types.hpp  utility.hpp
cpp/include/gg/ipc/: client.hpp  subscription.hpp
cpp/include/ggl/: arena.hpp  buffer.hpp  error.hpp  list.hpp  map.hpp  object.hpp  schema.hpp  sdk.hpp  types.hpp  utility.hpp
cpp/include/ggl/ipc/: client.hpp  subscription.hpp
cpp/priv_include/gg/ipc/: client_c_api.hpp  client_raw_c_api.hpp
cpp/priv_include/ggl/ipc/: client_c_api.hpp  client_raw_c_api.hpp
cpp/samples/config_ipc/: config_ipc-0.1.0.json  main.cpp
cpp/samples/object_manipulation/: main.cpp
cpp/samples/pubsub_cpp/: main.cpp
cpp/samples/template_foo/: main.cpp
cpp/src/: error.cpp  list.cpp  map.cpp
cpp/src/ipc/: client.cpp  get_config.cpp  subscribe_to_configuration_update.cpp  subscribe_to_iot_core.cpp  subscribe_to_topic.cpp  update_config.cpp
cpp/test/client/: connect.cpp  main.cpp
docs/: BUILD.md  DEVELOPMENT.md
include/gg/: arena.h  attr.h  base64.h  buffer.h  cbmc.h  error.h  flags.h  list.h  macro_util.h  map.h  object.h  sdk.h
include/gg/ipc/: client.h  client_raw.h  limits.h
include/ggl/: arena.h  attr.h  base64.h  buffer.h  cbmc.h  error.h  flags.h  list.h  macro_util.h  map.h  object.h  sdk.h
include/ggl/ipc/: client.h  client_raw.h  error.h  limits.h
misc/: check_contracts.py  dictionary.txt  iwyu_mappings.yml  run_bindgen.sh
mock/: mock.c  object_compare.c  process_wait.c  socket.h
mock/gg/: object_compare.h  process_wait.h
mock/gg/ipc/: mock.h  mock.hpp  mock_types.hpp  packet_sequences.h
mock/ggl/: object_compare.h
mock/ggl/ipc/: mock.h  mock.hpp  mock_types.hpp
mock/packets/: connect_packet_sequences.c  mqtt_packet_sequences.c  packets.c  packets.h
priv_include/gg/: alloc.h  backoff.h  cleanup.h  file.h  init.h  io.h  json_decode.h  json_encode.h  log.h  math.h  object_iter.h  object_visit.h  rand.h  socket.h  socket_epoll.h  utils.h  vector.h
priv_include/gg/eventstream/: decode.h  encode.h  rpc.h  types.h
priv_include/gg/ipc/: client_priv.h
priv_include/ggl/: alloc.h  backoff.h  base64.h  cleanup.h  constants.h  file.h  init.h  io.h  json_decode.h  json_encode.h  log.h  macro_util.h  math.h  object_iter.h  object_visit.h  rand.h  socket.h  socket_epoll.h  socket_handle.h  socket_server.h  utils.h  vector.h  version.h
priv_include/ggl/eventstream/: decode.h  encode.h  rpc.h  types.h
priv_include/ggl/ipc/: client_priv.h  error.h
rust/: .gitignore  Cargo.toml  build.rs  clippy.toml  wrapper.h
rust/examples/: config.rs  iot_core_mqtt.rs  restart_component.rs  subscribe_to_configuration_update.rs  update_state.rs
rust/src/: c.rs  error.rs  ipc.rs  lib.rs  object.rs
samples/: README.md
samples/config/: main.c  recipe.yml
samples/iot_core_mqtt/: main.c  recipe.yml
samples/restart_component/: main.c  recipe.yml  recipe_classic.yml
samples/subscribe_to_configuration_update/: README.md  main.c  recipe.yml
samples/update_state/: main.c  recipe.yml
src/: alloc.c  arena.c  backoff.c  base64.c  buffer.c  crc32.c  crc32.h  error.c  file.c  init.c  ipc_error.c  json_decode.c  json_encode.c  list.c  log.c  map.c  math.c  object.c  object_visit.c  rand.c  sleep.c  socket.c  socket_epoll.c  socket_handle.c  socket_server.c  vector.c
src/eventstream/: decode.c  encode.c  rpc.c
src/ipc/: client.c
src/ipc/client/: b64_encode_mem.c  eventstream_io.c  eventstream_io.h  get_config.c  private_get_system_config.c  publish_to_iot_core.c  publish_to_iot_core.h  publish_to_topic.c  receive.c  receive.h  restart_component.c  subscribe_to_configuration_update.c  subscribe_to_iot_core.c  subscribe_to_topic.c  update_config.c  update_state.c
test/: default_main.c  main_ipc_overrides.c
test/client/: connect.c  mqtt.c
test/client_connect/: main.c
unity/gg_test/: test.c
unity/gg_test/include/gg/: process_wait.h  test.h
unity/unity_config/: unity_handlers.c  unity_handlers.h
unity_config/: test.c  unity_handlers.c
unity_config/include/gg/: test.h
unity_config/include/unity/: unity_config.h
